--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "DOM",
       "DOM.Iterable"
     ],
+    "useUnknownInCatchVariables": true,
     "module": "ESNext",
     "skipLibCheck": true,
     /* Bundler mode */
